mystonline-wine, mystonline-cider: fix display of notes with MacPorts 1.9.x; see #25692
git-svn-id: https://svn.macports.org/repository/macports/trunk@69747 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/mystonline-cider/Portfile
+++ b/dports/games/mystonline-cider/Portfile
@@ -106,33 +106,40 @@ destroot {
     copy ${worksrcpath}/wineprefix ${destroot}${wineprefix}
 }
 
-notes                       Welcome to Myst Online: Uru Live Again (MO:ULagain) \
-                            \n\n* To play Myst Online, you need an account, which you can create for free by visiting \
-                            ${homepage} and clicking Play. \
-                            \n* Myst Online automatically updates itself. \
-                            The first time you open Myst Online, it will download several gigabytes of game data. \
-                            Be patient\; this will take some time. \
-                            If you already have the game data from a non-MacPorts installation of Myst Online, \
-                            you can save time by copying or moving it into ${assets_dir} \
-                            \n\nThis version of Myst Online runs via the Cider wrapper developed for the GameTap version \
-                            of Myst Online which ran from 2007 to 2008. \
-                            Peculiarities of this method of running Myst Online include: \
-                            \n\n* Several icons appear and disappear in the dock while the game is starting. \
-                            \n* The game may crash (unexpectedly quit) when you quit it. \
-                            \n* If you need to force-quit the game while in fullscreen mode, press Command-Option-Escape. \
-                            \n* The game starts in fullscreen mode at 800x600 resolution. To switch to a \
-                            higher resolution, use the in-game graphics settings. \
-                            \n* To switch between fullscreen and windowed mode, press Command-Return. \
-                            \n* Intel GMA 950 integrated graphics cards are not supported. Some graphics including your avatar \
-                            will not display correctly. \
-                            \n* If sounds are distorted or nonexistent, install the sounddecompress port and follow the instructions. \
-                            \n* The microphone cannot be used to talk to other players, though you can hear other players talking to you. \
-                            \n* On Macs with NVIDIA graphics cards, water does not show up properly in Er'cana. \
-                            \n* On Macs with NVIDIA graphics cards that have not upgraded to Mac OS X 10.6.3, \
-                            Eder Kemo has severe performance problems. \
-                            \n\nOther methods of running Myst Online on a Mac include the Wine version in the \
-                            mystonline-wine port, and running the game in Windows via VMware, Parallels or Boot Camp. \
-                            \n\nTo play Myst Online, open ${app_package}.
+notes "
+Welcome to Myst Online: Uru Live Again (MO:ULagain)
+
+* To play Myst Online, you need an account, which you can create for free by visiting\
+${homepage} and clicking Play.
+* Myst Online automatically updates itself.\
+The first time you open Myst Online, it will download several gigabytes of game data.\
+Be patient\; this will take some time.\
+If you already have the game data from a non-MacPorts installation of Myst Online,\
+you can save time by copying or moving it into ${assets_dir}
+
+This version of Myst Online runs via the Cider wrapper\
+developed for the GameTap version of Myst Online which ran from 2007 to 2008.\
+Peculiarities of this method of running Myst Online include:
+
+* Several icons appear and disappear in the dock while the game is starting.
+* The game may crash (unexpectedly quit) when you quit it.
+* If you need to force-quit the game while in fullscreen mode, press Command-Option-Escape.
+* The game starts in fullscreen mode at 800x600 resolution.\
+To switch to a higher resolution, use the in-game graphics settings.
+* To switch between fullscreen and windowed mode, press Command-Return.
+* Intel GMA 950 integrated graphics cards are not supported.\
+Some graphics including your avatar will not display correctly.
+* If sounds are distorted or nonexistent, install the sounddecompress port and follow the instructions.
+* The microphone cannot be used to talk to other players, though you can hear other players talking to you.
+* On Macs with NVIDIA graphics cards, water does not show up properly in Er'cana.
+* On Macs with NVIDIA graphics cards that have not upgraded to Mac OS X 10.6.3,\
+Eder Kemo has severe performance problems.
+
+Other methods of running Myst Online on a Mac include the Wine version in the mystonline-wine port,\
+and running the game in Windows via VMware, Parallels or Boot Camp.
+
+To play Myst Online, open ${app_package}.
+"
 
 universal_variant           no
 
