--- a/dports/games/mystonline-wine/Portfile
+++ b/dports/games/mystonline-wine/Portfile
@@ -91,44 +91,52 @@ destroot {
     copy ${worksrcpath}/wineprefix ${destroot}${wineprefix}
 }
 
-notes                       Welcome to Myst Online: Uru Live Again (MO:ULagain) \
-                            \n\n* To play Myst Online, you need an account, which you can create for free by visiting \
-                            ${homepage} and clicking Play. \
-                            \n* Myst Online automatically updates itself. \
-                            The first time you open Myst Online, it will download several gigabytes of game data. \
-                            Be patient\; this will take some time. \
-                            If you already have the game data from a non-MacPorts installation of Myst Online, \
-                            you can save time by copying or moving it into ${assets_dir} \
-                            \n\nThis version of Myst Online runs via Wine. \
-                            Peculiarities of this method of running Myst Online include: \
-                            \n* Don't click anywhere in the updater window. If you do, the window will follow the mouse \
-                            cursor and will not go away. If you need to cancel the updater, press the Escape key. \
-                            \n* The first time you log into Myst Online, you will be prompted to install PhysX. \
-                            \n* The mouse cursor image is wrong. \
-                            \n* To be able to look around by holding down the Command key while dragging, \
-                            enable the \"Emulate three button mouse\" option in X11 preferences. \
-                            \n* The menubar cannot be hidden. \
-                            \n* The dock does not hide automatically. It can be hidden using the normal ways \
-                            (e.g. Apple menu > Dock > Turn hiding on) but you may also want to move the dock \
-                            to the side of the screen as otherwise it gets in the way of game play. \
-                            \n* The game's dock icon keeps bouncing longer than it should, doesn't show that \
-                            it's running even when it is, and doesn't bring the game to the front if you click it. \
-                            \n* Accessing the dock icon's context menu doesn't let you quit the game normally, \
-                            though it does let you force-quit it. \
-                            \n* The application has a generic icon. \
-                            \n* The game starts in fullscreen mode. If in fullscreen mode you access the game's \
-                            graphics settings, you cannot return to the game\; you must force-quit. \
-                            \n* To switch between fullscreen and windowed mode, use the checkbox in the graphics settings. \
-                            \n* Intel GMA 950 integrated graphics cards are not supported. Some graphics including your avatar \
-                            will not display correctly. \
-                            \n* If sounds are distorted or nonexistent, install the sounddecompress port and follow the instructions. \
-                            \n* The microphone cannot be used to talk to other players, though you can hear other players talking to you. \
-                            \n* On Macs with NVIDIA graphics cards, water does not show up properly in Er'cana. \
-                            \n* On Macs with NVIDIA graphics cards that have not upgraded to Mac OS X 10.6.3, \
-                            Eder Kemo has severe performance problems. \
-                            \n\nOther methods of running Myst Online on a Mac include the Cider version in the \
-                            mystonline-cider port, and running the game in Windows via VMware, Parallels or Boot Camp. \
-                            \n\nTo play Myst Online, open ${app_package}.
+notes "
+Welcome to Myst Online: Uru Live Again (MO:ULagain)
+
+* To play Myst Online, you need an account, which you can create for free by visiting\
+${homepage} and clicking Play.
+* Myst Online automatically updates itself.\
+The first time you open Myst Online, it will download several gigabytes of game data.\
+Be patient\; this will take some time.\
+If you already have the game data from a non-MacPorts installation of Myst Online,\
+you can save time by copying or moving it into ${assets_dir}
+
+This version of Myst Online runs via Wine.\
+Peculiarities of this method of running Myst Online include:
+
+* Don't click anywhere in the updater window.\
+If you do, the window will follow the mouse cursor and will not go away.\
+If you need to cancel the updater, press the Escape key.
+* The first time you log into Myst Online, you will be prompted to install PhysX.
+* The mouse cursor image is wrong.
+* To be able to look around by holding down the Command key while dragging,\
+enable the \"Emulate three button mouse\" option in X11 preferences.
+* The menubar cannot be hidden.
+* The dock does not hide automatically. It can be hidden using the normal ways\
+(e.g. Apple menu > Dock > Turn hiding on) but you may also want to move the dock\
+to the side of the screen as otherwise it gets in the way of game play.
+* The game's dock icon keeps bouncing longer than it should, doesn't show that\
+it's running even when it is, and doesn't bring the game to the front if you click it.
+* Accessing the dock icon's context menu doesn't let you quit the game normally,\
+though it does let you force-quit it.
+* The application has a generic icon.
+* The game starts in fullscreen mode. If in fullscreen mode you access the game's\
+graphics settings, you cannot return to the game\; you must force-quit.
+* To switch between fullscreen and windowed mode, use the checkbox in the graphics settings.
+* Intel GMA 950 integrated graphics cards are not supported.\
+Some graphics including your avatar will not display correctly.
+* If sounds are distorted or nonexistent, install the sounddecompress port and follow the instructions.
+* The microphone cannot be used to talk to other players, though you can hear other players talking to you.
+* On Macs with NVIDIA graphics cards, water does not show up properly in Er'cana.
+* On Macs with NVIDIA graphics cards that have not upgraded to Mac OS X 10.6.3,\
+Eder Kemo has severe performance problems.
+
+Other methods of running Myst Online on a Mac include the Cider version in the mystonline-cider port,\
+and running the game in Windows via VMware, Parallels or Boot Camp.
+
+To play Myst Online, open ${app_package}.
+"
 
 universal_variant           no
 
