--- a/dports/games/mystonline-cider/Portfile
+++ b/dports/games/mystonline-cider/Portfile
@@ -89,7 +89,7 @@ build {
     ln -s ${assets_dir}/TOS.txt ${tos}
     
     # Build the chown wrapper program
-    system "cd ${worksrcpath} && ${configure.cc} chown-data.c -o chown-data"
+    system "cd ${worksrcpath} && ${configure.cc} ${configure.cc_archflags} chown-data.c -o chown-data"
 }
 
 destroot {
