--- a/dports/games/mystonline-wine/Portfile
+++ b/dports/games/mystonline-wine/Portfile
@@ -76,7 +76,7 @@ build {
     ln -s ${assets_dir} "${program_files}/Uru Live"
     
     # Build the chown wrapper program
-    system "cd ${worksrcpath} && ${configure.cc} chown-data.c -o chown-data"
+    system "cd ${worksrcpath} && ${configure.cc} ${configure.cc_archflags} chown-data.c -o chown-data"
 }
 
 destroot {
