py26-gevent: update to 0.13.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69750 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-gevent/Portfile
+++ b/dports/python/py26-gevent/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-gevent
-version             0.12.2
+version             0.13.0
 maintainers         stromnov openmaintainer
 
 description         Coroutine-based Python networking library.
@@ -20,14 +20,14 @@ homepage            http://gevent.org
 master_sites        http://pypi.python.org/packages/source/g/gevent/
 distname            gevent-${version}
 
-checksums           md5     97c75039a67593d3f5375fb77f73bbe7 \
-                    sha1    94e8d85d019abcbccaec630f8484896210d8f44d \
-                    rmd160  b5c1a188d0fc76b2f175c1307a9dac6751fdfca8
+checksums           md5     8f687002c6fcbdf8b323319f451ba4af \
+                    sha1    1fef1815528f12924c44725f779834002e7bfe14 \
+                    rmd160  970b7d77abafa8e5003f7fca1fc3a6b399fcae5b
 
 depends_build       port:py26-greenlet \
                     port:libevent
 
-build.args-append   -I${prefix}/include -L${prefix}/lib -1 --dynamic
+build.args-append   -I${prefix}/include -L${prefix}/lib
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
