py26-pyproj: update to 1.8.7
git-svn-id: https://svn.macports.org/repository/macports/trunk@69751 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pyproj/Portfile
+++ b/dports/python/py26-pyproj/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-pyproj
-version             1.8.6
+version             1.8.7
 categories          python
 maintainers         stromnov openmaintainer
 
@@ -20,12 +20,11 @@ master_sites        googlecode:pyproj
 
 distname            pyproj-${version}
 
-checksums           md5     dbaeb97d88ed7eaa6ec1b3e2d29916b3 \
-                    sha1    1e9b4e6bb02e3fb81a4a3c8469e9f88b6c0f5e84 \
-                    rmd160  acdc04bd218b9bbb0d96163dd6b3a50b257d07a3
+checksums           md5     1a01f694c8362f25bea8befdcf98e63b \
+                    sha1    55138e14ebb6e9fe61fcf79ae19d0f3e13b43c1f \
+                    rmd160  bfbd10c3e8fa7928c41bf3351d910eb59aadaaf3
 
-depends_lib-append  port:proj \
-                    port:py26-pyrex
+depends_lib-append  port:proj
 
 post-destroot {
     xinstall -m 644 -W ${worksrcpath} \
