--- a/dports/net/kismet/Portfile
+++ b/dports/net/kismet/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                kismet
-version             2010-01-R1
+version             2010-07-R1
 description         Wireless network detector and sniffer
 long_description    Kismet is an 802.11 layer2 wireless network detector, \
                     sniffer, and intrusion detection system.  Kismet will work \
@@ -25,9 +25,8 @@ platforms           darwin
 homepage            http://www.kismetwireless.net/
 master_sites        ${homepage}code
 
-checksums           md5     a6d6edcf65d5bb2cb5de6472bcc16f19 \
-                    sha1    4ac00edd8607196dffc450535487104edef76c1d \
-                    rmd160  fb77368ccf702971bb877d83d5c7e819daeecbb3
+checksums           sha1    8cd224a805905f330ef51d4dfdb2507e27b462ef \
+                    rmd160  d913b6dec4fd86f48afe08c98915af987b7a510b
 
 depends_lib         port:libpcap
 
