--- a/dports/mail/alpine/Portfile
+++ b/dports/mail/alpine/Portfile
@@ -1,12 +1,13 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name    alpine
 version 2.00
-revision 3
+revision 4
 categories  mail
-maintainers gmail.com:todmorrison
+maintainers nomaintainer
 description alpine - a Program for Internet News and Email
 homepage  http://www.washington.edu/alpine/
 platforms darwin
@@ -15,17 +16,16 @@ use_parallel_build  no
 long_description Alpine is a tool for reading, sending, and managing \
   electronic messages that was designed with novice users in mind.
 
-distname ${name}
 master_sites  ftp://ftp.cac.washington.edu/alpine/ \
   ftp://ftp.cac.washington.edu/alpine/old/
 checksums  md5 84e44cbf71ed674800a5d57eed9c1c52
 use_bzip2  yes
 
-worksrcdir ${distname}-${version}
+patchfiles patch-Makefile.in.diff
+patch.pre_args -p1
 
 platform darwin 10 {
-  patchfiles alpine-osx-10.6.patch
-  patch.pre_args -p1
+  patchfiles-append alpine-osx-10.6.patch
 }
 
 default_variants +without_tcl
@@ -54,7 +54,7 @@ configure.args \
   --with-debug-level=0
 
 build.args \
-  C_CLIENT_SPECIALS="GSSLIB=/${prefix}/lib SSLDIR=${prefix}"
+  SPECIALS="GSSLIB=/${prefix}/lib SSLDIR=${prefix}"
 
 variant without_krb5 description {Disable Kerberos5 support} {
   depends_lib-delete port:cyrus-sasl2
