--- a/dports/aqua/LyX/Portfile
+++ b/dports/aqua/LyX/Portfile
@@ -4,8 +4,7 @@
 PortSystem	        1.0
 
 name			    LyX
-version			    1.6.6.1
-revision            1
+version			    1.6.7
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories	        aqua
 license             GPL
@@ -32,9 +31,8 @@ master_sites	    http://lyx.cybermirror.org/stable/${branch}.x/ \
 				    ftp://ftp.lyx.org/pub/lyx/stable/${branch}.x/ \
 				    http://gd.tuwien.ac.at/publishing/tex/lyx/stable/${branch}.x/
 
-checksums           md5     a17e4c37f7def9f18052e03634d42ca5 \
-                    sha1    4f0d20a890b6c78da7d863377632c5bb2b02fb4c \
-                    rmd160  b6ab705815ae6d7950cee32a947bf636d102d91b
+checksums           sha1    24f4edff7f31dd75c47862351ece0d1906cf2e75 \
+                    rmd160  72d6abeda7c1e93209f52242c27fdc016b0b41e8
 
 configure.pre_args  --prefix=${applications_dir}/LyX.app
 configure.args      --with-frontend=qt4 --without-x --with-included-gettext \
