--- a/dports/net/bind9/Portfile
+++ b/dports/net/bind9/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name			bind9
-version			9.7.1
-revision        1
+version			9.7.1-P2
 
 categories		net
 maintainers		geeklair.net:dluke
@@ -25,9 +24,9 @@ homepage		http://www.isc.org
 distname		bind-${version}
 master_sites		isc:${name}/${version}
 
-checksums	md5	712c425e59cb4aa9309bc4716283742f \
-		sha1	e2540c02b8979b5c8a7303e5a0081c00f9cee7ae \
-		rmd160	eb57f77ed9afc3481e698668c3a54c254829d8a4
+checksums	md5	bd6be63cc910d04da39103d441871596 \
+		sha1	b24ea0e8a67b841601b803f54070610036931e64 \
+		rmd160	ec978498c0e0fa7f709fa3398a573e67557f06a4
 		
 depends_lib		port:openssl port:libxml2
 
