--- a/dports/net/murmur/Portfile
+++ b/dports/net/murmur/Portfile
@@ -25,9 +25,9 @@ checksums           md5     de30ee85170e183b66568b53b04c5727 \
                     sha1    b2a7fd50e70147b3ea2361cbc5a577b0e1ae45ea \
                     rmd160  501aa1c4c170fb5aad2841cdfe3421376e62a07b
 
-#livecheck.type      regex
-#livecheck.url       ${homepage}
-livecheck.regex     "&#38; Murmur (\\d+\\.\\d+(\\.\\d+))"
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/project/showfiles.php?group_id=147372&package_id=162594
+livecheck.regex     mumble-(\\d+(\\.\\d+)+).tar.gz
 
 depends_lib \
     port:qt4-mac \
