--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100703040502
-set buildhash       g47e2b1
+set buildstamp      20100715040507
+set buildhash       g3618ff
 version             0.7.5
-revision            7
+revision            8
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    38a10593df5837ab7dca6e885423c83c12e0536f \
-                    rmd160  fdb73eae8bf345928d569dc0d69ad3d653bb623d
+checksums           sha1    05d3ffc0be48f4c5752f56099ad68503a92f4edc \
+                    rmd160  2294b0bc83a91cb4046d4e9d30f4041c1f8ee1da
 
 #configure.optflags  -O0
 #configure.cflags-append -g
