--- a/dports/python/py27-distribute/Portfile
+++ b/dports/python/py27-distribute/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python27 1.0
 
 name                py27-distribute
-version             0.6.13
+version             0.6.14
 categories-append   devel
 maintainers         snc openmaintainer
 description         Replacement for setuptools
@@ -22,9 +22,8 @@ distname            distribute-${version}
 
 conflicts           py27-setuptools
 
-checksums           md5     43460b429e86bf0da2bb18574d63ec0c \
-                    sha1    43fe5e3626a46baef451ab6577c9a4173ae47e5d \
-                    rmd160  8ed72027eb185676409170be2f467049ce2d54bc
+checksums           sha1    6bea50b97f36bf751548bb486a534204a690aa4d \
+                    rmd160  f56b449a71293df02636253e6667a971fef7469e
 
 python.link_binaries no
 
