--- a/dports/net/cacti/Portfile
+++ b/dports/net/cacti/Portfile
@@ -3,8 +3,7 @@
 PortSystem	1.0
 
 name			cacti
-version			0.8.7e
-revision		1
+version			0.8.7g
 categories		net
 maintainers		markd
 platforms		darwin
@@ -17,10 +16,9 @@ long_description	Cacti is a complete network graphing solution designed \
 
 homepage		http://www.cacti.net
 master_sites		http://www.cacti.net/downloads/:cacti
-use_zip			yes
 
 distfiles		${distname}${extract.suffix}:cacti
-checksums		${distname}${extract.suffix} md5 b5eb2f5c512959417d51535f37d4e97c
+checksums		${distname}${extract.suffix} md5 268421cb1a58d3444f7ecbddb4c4b016
 
 depends_lib		path:bin/mysql_config5:mysql5 \
 			port:rrdtool
@@ -28,14 +26,14 @@ depends_lib		path:bin/mysql_config5:mysql5 \
 use_configure   no
 build {}
 
-set cactiversion 0.8.7e
-set pluginversion 2.6
+set cactiversion 0.8.7g
+set pluginversion 2.8
 set cactidir ${prefix}/share/cacti
 
 variant plugins description {The Plugin Architecture for Cacti} {
 	master_sites-append http://mirror.cactiusers.org/downloads/plugins:plugins
 	distfiles-append cacti-plugin-${cactiversion}-PA-v${pluginversion}${extract.suffix}:plugins
-	checksums-append cacti-plugin-${version}-PA-v${pluginversion}${extract.suffix} md5 b337a2d569f8b387786fafc9f3d83a3f
+	checksums-append cacti-plugin-${version}-PA-v${pluginversion}${extract.suffix} md5 de8cbd06fc0d3a6bdc9f0a66da85660d
 }
 
 destroot {
@@ -138,7 +136,7 @@ at http://www.cacti.net/documentation.php for operational instructions.
    c) Edit ${cactidir}/include/global.php - modify the url_path to reflect Cacti's default URL
       and add an entry to load each plugin you install; the weathermap plugin is an example:
 
-	\$config\['url_path'\] = '/cacti/';
+	\$url_path = \"/cacti/\";
 
 	\$plugins = array();
 	\$plugins[] = 'weathermap';
