mutt-devel: add patch to fix building +ssl with openssl 1.0.0 (#25623)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69763 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/mutt-devel/Portfile
+++ b/dports/mail/mutt-devel/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 
 name                mutt-devel
 version             1.5.20
-revision            3
+revision            4
 categories          mail
 platforms           darwin
 maintainers         simon openmaintainer
@@ -57,6 +57,7 @@ variant imap description {IMAP support} {
     configure.args-append   --enable-imap
 }
 variant ssl description {Secure Sockets Layer support} {
+    patchfiles-append       patch-1.5.20.mutt_ssl.diff
     configure.args-append   --with-ssl=${prefix}
     depends_lib-append      port:openssl
 }
