bugzilla: change default database to mysql5 to match dependency p5-dbd-mysql (#25702)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69765 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bugzilla/Portfile
+++ b/dports/devel/bugzilla/Portfile
@@ -4,7 +4,7 @@ PortSystem		1.0
 
 name			bugzilla
 version			2.22.3
-revision		1
+revision		2
 categories		devel www databases
 maintainers		nomaintainer
 platforms               darwin
@@ -29,7 +29,6 @@ checksums               md5     871044e9ef0b5ea523408b66dbe4c5ae \
                         rmd160  787f84e343297b1a8caee8310354e01f7c8cc2f8
 
 depends_lib		port:apache2 \
-			port:mysql4 \
 			path:bin/perl:perl5 \
 			port:p5-appconfig \
 			port:p5-timedate \
@@ -47,9 +46,14 @@ depends_lib		port:apache2 \
 			port:p5-perl-ldap \
 			port:p5-xml-twig
 
-variant mysql5 description "Use mysql5 instead of mysql4" {
-                        depends_lib-delete   port:mysql4
-                        depends_lib-append   path:bin/mysql_config5:mysql5
+variant mysql4 conflicts mysql5 description "Use mysql4 database" {
+                depends_lib-append   port:mysql4
+}
+variant mysql5 conflicts mysql4 description "Use mysql5 database" {
+                depends_lib-append   path:bin/mysql_config5:mysql5
+}
+if {![variant_isset mysql4]} {
+    default_variants +mysql5
 }
 
 patchfiles		patch-checksetup.pl
