bugzilla: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@69766 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bugzilla/Portfile
+++ b/dports/devel/bugzilla/Portfile
@@ -129,22 +129,20 @@ destroot {
 	}
 }
 
-post-install {
-	ui_msg "-----------------------------------------------------------"
-	ui_msg "To complete the installation of ${name}, you should read"
-	ui_msg "the quick start document found here:"
-	ui_msg ""
-	ui_msg "  ${prefix}/share/doc/${name}/QUICKSTART"
-	ui_msg ""
-	ui_msg "For step 4, the ${name} configuration file can be"
-	ui_msg "found here:"
-	ui_msg ""
-	ui_msg "  ${prefix}/www/${name}/localconfig"
-	ui_msg ""
-	ui_msg "For the rest of the steps, the main ${name} directory"
-	ui_msg "can be found here (needed for step 7):"
-	ui_msg ""
-	ui_msg "  ${prefix}/www/${name}"
-	ui_msg "-----------------------------------------------------------"
-}
+notes \
+"-----------------------------------------------------------
+To complete the installation of ${name}, you should read
+the quick start document found here:
 
+  ${prefix}/share/doc/${name}/QUICKSTART
+
+For step 4, the ${name} configuration file can be
+found here:
+
+  ${prefix}/www/${name}/localconfig
+
+For the rest of the steps, the main ${name} directory
+can be found here (needed for step 7):
+
+  ${prefix}/www/${name}
+-----------------------------------------------------------"
