macfuse: set file permissions on kernel module and binaries (hopefully fixes #25609)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69768 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/fuse/macfuse/Portfile
+++ b/dports/fuse/macfuse/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name                macfuse
 version             2.0.3
-revision            1
+revision            2
 categories          fuse devel
 platforms           macosx
 maintainers         dports
@@ -76,7 +76,11 @@ post-patch {
 # macfuse_buildtool has been patched to install directly into ${destpath},
 # so destroot phase is unnecessary
 build {
-     system "cd ${worksrcpath} && ./macfuse_buildtool.sh -t smalldist"
+    system "cd ${worksrcpath} && ./macfuse_buildtool.sh -t smalldist"
+    
+    # Set file permissions on kernel module and binaries (see #25609)
+    system "chown -R root:wheel ${destpath}/Library/Filesystems/fusefs.fs"
+    file attributes ${destpath}/Library/Filesystems/fusefs.fs/Support/load_fusefs -permissions 04755
 }
 
 destroot.violate_mtree yes
