--- a/dports/lang/gcc42/Portfile
+++ b/dports/lang/gcc42/Portfile
@@ -52,10 +52,11 @@ patch {
 }
 
 # the generated compiler doesn't accept -arch
-if {[info exists build_arch] && ${os.platform} == "darwin"} {
-    configure.cc_archflags
-    configure.cxx_archflags
-    configure.objc_archflags
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+platform darwin {
     configure.pre_args-append --build=${build_arch}-apple-darwin${os.major} --host=${build_arch}-apple-darwin${os.major}
 }
 
