py-libdnet, py25-libdnet, py26-libdnet: use same dist_subdir as libdnet so distfiles aren't downloaded multiple times; see #25627
git-svn-id: https://svn.macports.org/repository/macports/trunk@69771 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-libdnet/Portfile
+++ b/dports/python/py-libdnet/Portfile
@@ -21,6 +21,7 @@ long_description        \
 homepage                http://libdnet.sourceforge.net
 master_sites            sourceforge:libdnet
 distname                libdnet-${version}
+dist_subdir             libdnet
 
 depends_lib		port:python24 port:libdnet
 
