--- a/dports/python/py25-libdnet/Portfile
+++ b/dports/python/py25-libdnet/Portfile
@@ -22,6 +22,7 @@ long_description        \
 homepage                http://libdnet.sourceforge.net
 master_sites            sourceforge:libdnet
 distname                libdnet-${version}
+dist_subdir             libdnet
 
 depends_lib		port:python25 port:libdnet
 
