--- a/dports/python/py26-libdnet/Portfile
+++ b/dports/python/py26-libdnet/Portfile
@@ -24,6 +24,7 @@ long_description        \
 homepage                http://libdnet.sourceforge.net
 master_sites            sourceforge:libdnet
 distname                libdnet-${version}
+dist_subdir             libdnet
 
 depends_lib		port:python26 port:libdnet
 
