py-libdnet, py25-libdnet, py26-libdnet: update to 1.12, switch homepage and master_sites to googlecode, disable universal variant; see #25629
git-svn-id: https://svn.macports.org/repository/macports/trunk@69772 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-libdnet/Portfile
+++ b/dports/python/py26-libdnet/Portfile
@@ -7,8 +7,7 @@ set python.bin	${prefix}/bin/python2.6
 set python.prefix  ${frameworks_dir}/Python.framework/Versions/2.6
 
 name                    py26-libdnet
-version                 1.11
-revision                1
+version                 1.12
 categories              python net
 maintainers             nzbox.com:msavory
 platforms		darwin
@@ -21,17 +20,20 @@ long_description        \
         firewalling (IP filter, ipfw, ipchains, pf, ...), network interface \
         lookup and manipulation, raw IP packet and Ethernet frame transmission.
 
-homepage                http://libdnet.sourceforge.net
-master_sites            sourceforge:libdnet
+homepage                http://code.google.com/p/libdnet/
+master_sites            googlecode
+extract.suffix          .tgz
 distname                libdnet-${version}
 dist_subdir             libdnet
 
+checksums               md5     9253ef6de1b5e28e9c9a62b882e44cc9 \
+                        sha1    71302be302e84fc19b559e811951b5d600d976f8 \
+                        rmd160  4b849f07c3513522fda65af067928b7e6d504aab
+
 depends_lib		port:python26 port:libdnet
 
-checksums		md5 04c394ed8e1e7fc455456e79e908916d \
-			sha1 e2ae8c7f0ca95655ae9f77fd4a0e2235dc4716bf \
-			rmd160 9a940cdd96af4b513a048f3a389e3f7eb0bb7011
-
+# libdnet is not universal
+universal_variant       no
 
 pre-destroot {
 	worksrcdir	${worksrcdir}/python
