Don't set version separately; just pass it directly to perl5.setup; see http://lists.macosforge.org/pipermail/macports-dev/2010-July/012324.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@69774 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-crypt-cast5/Portfile
+++ b/dports/perl/p5-crypt-cast5/Portfile
@@ -4,8 +4,7 @@ PortSystem			1.0
 
 PortGroup			perl5 1.0
 
-version				0.05
-perl5.setup			Crypt-Cast5 ${version}
+perl5.setup			Crypt-Cast5 0.05
 distfiles			Crypt-CAST5-${version}.tar.gz
 revision			0
 maintainers			ricci openmaintainer
