--- a/dports/perl/p5-file-basedir/Portfile
+++ b/dports/perl/p5-file-basedir/Portfile
@@ -4,8 +4,7 @@ PortSystem		1.0
 
 PortGroup		perl5 1.0
 
-version			0.03
-perl5.setup		File-BaseDir ${version}
+perl5.setup		File-BaseDir 0.03
 revision		2
 maintainers		ricci
 description		    This module can be used to find directories and files as             \
