--- a/dports/perl/p5-cam-pdf/Portfile
+++ b/dports/perl/p5-cam-pdf/Portfile
@@ -2,9 +2,9 @@
 
 PortSystem                      1.0
 PortGroup                       perl5 1.0
-version                         1.52
+
+perl5.setup                     CAM-PDF 1.52
 revision                        1
-perl5.setup                     CAM-PDF ${version}
 maintainers                     ricci
 description                     Reads and writes any document that conforms to PDF v1.4
 long_description                This package reads and writes any document that \
