--- a/dports/perl/p5-crypt-openpgp/Portfile
+++ b/dports/perl/p5-crypt-openpgp/Portfile
@@ -4,8 +4,7 @@ PortSystem			1.0
 
 PortGroup			perl5 1.0
 
-version				1.04
-perl5.setup			Crypt-OpenPGP ${version}
+perl5.setup			Crypt-OpenPGP 1.04
 revision			0
 maintainers			ricci openmaintainer
 description			Pure-Perl OpenPGP implementation
