--- a/dports/perl/p5-file-mimeinfo/Portfile
+++ b/dports/perl/p5-file-mimeinfo/Portfile
@@ -4,8 +4,7 @@ PortSystem		1.0
 
 PortGroup		perl5 1.0
 
-version			0.15
-perl5.setup		File-MimeInfo ${version}
+perl5.setup		File-MimeInfo 0.15
 revision		0
 maintainers		ricci
 description		This module can be used to determine the mime type of a file.   \
