p5-crypt-cast5: allow port to be installed on case-sensitive filesystems
git-svn-id: https://svn.macports.org/repository/macports/trunk@69775 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-crypt-cast5/Portfile
+++ b/dports/perl/p5-crypt-cast5/Portfile
@@ -5,8 +5,8 @@ PortSystem			1.0
 PortGroup			perl5 1.0
 
 perl5.setup			Crypt-Cast5 0.05
-distfiles			Crypt-CAST5-${version}.tar.gz
 revision			0
+distname			Crypt-CAST5-${version}
 maintainers			ricci openmaintainer
 description			CAST5 block cipher
 long_description	This module provides an implementation of \
