p5-crypt-cast5: simplify fix for case-sensitive filesystems, and fix homepage, by using the software's correct name (correct capitalization) in perl5.setup
git-svn-id: https://svn.macports.org/repository/macports/trunk@69776 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-crypt-cast5/Portfile
+++ b/dports/perl/p5-crypt-cast5/Portfile
@@ -4,9 +4,8 @@ PortSystem			1.0
 
 PortGroup			perl5 1.0
 
-perl5.setup			Crypt-Cast5 0.05
-revision			0
-distname			Crypt-CAST5-${version}
+perl5.setup			Crypt-CAST5 0.05
+revision			1
 maintainers			ricci openmaintainer
 description			CAST5 block cipher
 long_description	This module provides an implementation of \
