p5-file-libmagic: simplify: change distfiles to extract.suffix
git-svn-id: https://svn.macports.org/repository/macports/trunk@69777 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-file-libmagic/Portfile
+++ b/dports/perl/p5-file-libmagic/Portfile
@@ -5,8 +5,8 @@ PortSystem		1.0
 PortGroup		perl5 1.0
 
 perl5.setup		File-LibMagic 0.85
-distfiles		File-LibMagic-${version}.tgz
 revision		0
+extract.suffix		.tgz
 maintainers		ricci
 description		Perl wrapper for libmagic
 long_description	${description}
