update to 1.0.0, closing #25672
git-svn-id: https://svn.macports.org/repository/macports/trunk@69779 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/couchdb/Portfile
+++ b/dports/databases/couchdb/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		couchdb
-version		0.11.0
+version		1.0.0
 
 categories	databases
 platforms	darwin
@@ -21,9 +21,9 @@ master_sites	apache
 master_sites.mirror_subdir	${name}/${version}/
 distname	apache-${name}-${version}
 
-checksums           md5     c1784e3850da01dc37dad20c5b1a85f8 \
-                    sha1    b5b84e1d8a082960df09df7e4eda664b5e6c59d7 \
-                    rmd160  cd52e0f41a67b1cba9792e2ac11c74cad5c6a1a9
+checksums           md5     71e89c4b21c62417f2f413d74a38f079 \
+                    sha1    72fd5a4679f73f9e55414caf0fab696b320f0ec3 \
+                    rmd160  d32a5e16f505cb428ac573bad2c842409ea86244
 
 depends_lib	port:automake \
     port:autoconf \
@@ -60,9 +60,6 @@ post-destroot {
 
 post-activate {
     ui_msg "########################################################################"
-    ui_msg "# Changes in CouchDB 0.10.0 make 0.9.1 database files incompatible."
-    ui_msg "# See http://wiki.apache.org/couchdb/BreakingChanges for details"
-    ui_msg "#"
     ui_msg "# Run the following command to install the CouchDB launchd"
     ui_msg "# startup item in order to start and re-start service automatically:"
     ui_msg "#"
@@ -72,4 +69,4 @@ post-activate {
 
 livecheck.type	regex
 livecheck.url	http://couchdb.apache.org/downloads.html
-livecheck.regex	apache-${name}-(0.\[0-9\]+.\[0-9\])
+livecheck.regex	apache-${name}-(\[0-9.\]+\[0-9\]+)
