--- a/dports/python/py-sip/Portfile
+++ b/dports/python/py-sip/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name			py-sip
-version			4.7.9
+version			4.10.4
 platforms               macosx
 categories		python devel
 maintainers		blair openmaintainer
@@ -22,9 +23,10 @@ master_sites	http://www.riverbankcomputing.com/static/Downloads/sip4/ \
                 http://www.gtlib.gatech.edu/pub/gentoo/distfiles/
 
 distname	sip-${version}
-checksums	md5 597d7ff7edb42a18421c806ffd18a136 \
-		sha1 a8eabe3890a1fc42ec77ac82fa41344ad23abe09 \
-		rmd160 719f7c7ae211ceb2bb7609c5e70d864054ccd23d
+checksums       md5     0d3b59e24dac8343e6135969d5c66793 \
+                sha1    dc2f30cc215c25fb78571c766863ad4649105bb2 \
+                rmd160  e81a7adad365fe6153483219dd2a0c1c48a5a805
+
 dist_subdir	python
 
 depends_lib	port:python24
