--- a/dports/python/py-pyqt4/Portfile
+++ b/dports/python/py-pyqt4/Portfile
@@ -1,10 +1,10 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem	1.0
 
 name		py-pyqt4
-version		4.4.3
-revision        2
+version		4.7.4
 platforms	macosx
 categories	python devel
 maintainers	gmail.com:tim.stoop
@@ -19,9 +19,9 @@ master_sites    http://www.riverbankcomputing.com/static/Downloads/PyQt4/ \
                 http://pyqwt.sourceforge.net/support/
 distname	PyQt-mac-gpl-${version}
 
-checksums md5 6d2a11cd1372ce98b486e9bc5de3c0fc \
-          sha1 6d1f3a717e551cd762b0adbd9c50f213c3ce8cbe \
-          rmd160 da91bedccfb6b1e3cbc69f527dd57ead83eb647e
+checksums       md5     18af44b8a51dc896200c8b299bee7937 \
+                sha1    6f164b05454c7c1e3ef77adcdcf8ef50d4ef0107 \
+                rmd160  b873f8920562caff7dc53c9722c185da2ea7aadc
 
 depends_lib	port:py-sip port:qt4-mac
 
