When copying py26 ports to py27 ports in r69687, maintainership was also copied.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69782 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-nose/Portfile
+++ b/dports/python/py27-nose/Portfile
@@ -8,7 +8,7 @@ set my_name         nose
 name				py27-${my_name}
 version				0.11.3
 categories-append	www
-maintainers			mcalhoun openmaintainer
+maintainers			nomaintainer
 description			A Python unittest extension.
 long_description \
     A unittest extension offering automatic test \
