--- a/dports/python/py27-numpy/Portfile
+++ b/dports/python/py27-numpy/Portfile
@@ -10,7 +10,7 @@ version					1.4.1
 revision				1
 categories				python
 platforms				darwin
-maintainers				mcalhoun openmaintainer
+maintainers				nomaintainer
 description				Core utilities for the scientific library scipy
 long_description		${description}
 
