--- a/dports/python/py25-m2crypto/Portfile
+++ b/dports/python/py25-m2crypto/Portfile
@@ -5,7 +5,7 @@ PortGroup          python25 1.0
 
 name               py25-m2crypto
 version            0.20.2
-revision        1
+revision           1
 categories-append  crypto devel
 maintainers        ram openmaintainer
 description        M2Crypto is a crypto and SSL toolkit for Python.
@@ -24,6 +24,9 @@ checksums          md5 6c24410410d6eb1920ea43f77a93613a \
 depends_lib-append port:swig-python \
                    port:openssl \
                    port:py25-distribute
+
+patchfiles         patch-openssl10x.diff
+patch.pre_args     -p1
 
 post-patch {
   reinplace "s|#extra_link_args|extra_link_args|g" ${worksrcpath}/setup.py
