--- a/dports/science/opendx/Portfile
+++ b/dports/science/opendx/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem 1.0
+
 name		opendx
 version		4.4.4
 revision	2
@@ -17,7 +18,7 @@ long_description	\
 		And its sophisticated data model provides users with	\
 		great flexibility in creating visualizations.
 
-homepage	http://opendx.org
+homepage	http://opendx.org/
 master_sites	http://opendx.npaci.edu/source/
 
 checksums	md5 6da0c4cd21d3c08f97b7662e3aee5b7b
@@ -32,6 +33,8 @@ depends_lib	port:netcdf		\
 		path:lib/libXm.dylib:openmotif \
 		port:mesa
 
+patchfiles	configure.ac.diff
+
 use_autoreconf yes
 autoreconf.args -fv
 
@@ -39,7 +42,7 @@ platform darwin 9 {
     configure.cppflags-append -D_UINT64 -D_UINT32 -D_UINT16 -D_UINT8
 }
 
-variant no_java	{
+variant no_java description "disable java support"	{
 		  depends_lib-delete	port:cosmoplayer
 		  depends_lib-delete	port:opendx-java40
 		  configure.args-delete --with-jni-path=/System/Library/Frameworks/JavaVM.frameworks/Headers
