Convert ui_msg to notes.  Thanks to J. Lavergne.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69791 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/cacti/Portfile
+++ b/dports/net/cacti/Portfile
@@ -4,6 +4,7 @@ PortSystem	1.0
 
 name			cacti
 version			0.8.7g
+revision		1
 categories		net
 maintainers		markd
 platforms		darwin
@@ -48,9 +49,9 @@ destroot {
 	}
 }
 
-post-activate {
 
-ui_msg "\n **** To complete the Cacti installation ****
+notes \
+ "**** To complete the Cacti installation ****
 
 To complete the Cacti installation follow the steps below.  Read the documentation
 at http://www.cacti.net/documentation.php for operational instructions.
@@ -155,8 +156,5 @@ Paths:
 	snmpget binary path: /usr/bin/snmpget
 
 	RRDtool binary path: ${prefix}/bin/rrdtool
-	PHP binary path: ${prefix}/bin/php (if not using MacPorts PHP, use appropriate path)
+	PHP binary path: ${prefix}/bin/php (if not using MacPorts PHP, use appropriate path)"
 
-\n"
-
-}
