--- a/dports/mail/getmail/Portfile
+++ b/dports/mail/getmail/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup python26 1.0
 
 name			getmail
-version			4.16.0
+version			4.20.0
 categories		mail python
 platforms		darwin
 maintainers		mww
@@ -17,17 +17,15 @@ long_description	getmail version 4 is a flexible, extensible mail retrieval \
 
 homepage		http://pyropus.ca/software/getmail/
 master_sites	${homepage}/old-versions/
-checksums           md5     07d81a4b20be1304bb74af25803db914 \
-                    sha1    372513e8d1664d832d9e350918a841f26ca46685 \
-                    rmd160  9cf6f408d50597a5935ed27c9d1de872a673e452
+checksums		md5     33a090d62b6039e0a8df4c3da545d851 \
+				sha1    999e8987ff8321291eca507549ce5e8ce0e65030 \
+				rmd160  bdf20ee8e30f3b1a1f087627e86003befa995fee
 dist_subdir		${name}
 patchfiles		patch-setup.py.diff
 
+python.link_binaries_suffix
+
 post-destroot {
-	foreach binfile [glob -tails -directory ${destroot}${python.prefix}/bin *] {
-		ln -s ${python.prefix}/bin/${binfile} \
-			${destroot}${prefix}/bin/${binfile}
-	}
 	foreach manfile [glob -tails -directory ${destroot}${python.prefix}/share/man/man1 *] {
 		ln -s ${python.prefix}/share/man/man1/${manfile} \
 			${destroot}${prefix}/share/man/man1/${manfile}
