poppler-data: update to version 0.4.3.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69796 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/poppler-data/Portfile
+++ b/dports/graphics/poppler-data/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name        poppler-data
-version     0.4.2
-revision    1
+version     0.4.3
 maintainers nomaintainer
 categories  graphics
 platforms   darwin
@@ -18,7 +17,9 @@ long_description \
 
 master_sites    ${homepage}
 
-checksums       sha1    fa46b9c57564ab17d0f65e35a85147c3d98a7e81
+checksums       md5     2d648047e5d0b315df1571b460ee6a96 \
+                sha1    aa28288563d2542e14414666a8b35d01f42ad164 \
+                rmd160  0a106b7d94675017de9b92ae523f9808ada2e925
 
 use_configure   no
 build           {}
